# genetics

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
crates/config/: Cargo.toml
crates/config/src/: config_highlight.rs  lib.rs  markup.rs  mod.rs
crates/libs/: Cargo.toml
crates/libs/src/: lib.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: codeblock.rs  context.rs  fence.rs  highlight.rs  lib.rs  markdown.rs
crates/utils/: Cargo.toml
crates/utils/src/: content.rs  fs.rs  lib.rs  net.rs  page.rs  site.rs
src/: cli.rs  main.rs
src/utils/: fs.rs  mod.rs  net.rs  page.rs  site.rs
