[package]
name = "genetics"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iamgabrielsoft/genetics"
keywords = ["static-site-generator", "ssg", "static-site", "site-generator"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.56"
toml = "0.8"
walkdir = "2.5.0"
regex = "1"
once_cell = "1.18.0"
serde = {version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
ctrlc = "3.4"
notify-debouncer-full = "0.5"
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"] }
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
open = "5"
ws = "0.9"