[package]
name = "genetics"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
license = "MIT"
edition = "2021"
publish = false
description = "A static site generator"
repository = "https://github.com/iamgabrielsoft/genetics"

[dependencies]
# Local crates
markdown = { path = "crates/markdown" }
config = { path = "crates/config" }
libs = { path = "crates/libs" }
utils = { path = "crates/utils" }
errors = { path = "crates/errors" }

# External dependencies
clap = { version = "4", features = ["derive"] }
toml = "0.8"
walkdir = "2.5.0"
regex = "1"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
pulldown-cmark-escape = "0.10"
ctrlc = "3.4"
notify-debouncer-full = "0.5"
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"] }
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
ws = "0.9.2"
open = "3.0.0"
tera = "1.20.0"
