[package]
name = "config"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
edition = "2021"
description = "Configuration library for Genetics"
publish = false
repository = "https://github.com/iamgabrielsoft/genetics"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
once_cell = "1.19.0"

errors = { path = "../errors" }
libs = { path = "../libs" }
utils = { path = "../utils" }
