[package]
name = "libs"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
edition = "2021"
description = "Libraries for Genetics"
publish = false
repository = "https://github.com/iamgabrielsoft/genetics"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.56"
toml = "0.8"
walkdir = "2.5.0"
regex = "1"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
notify-debouncer-full = "0.5"
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"] }
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
ws = "0.9.2"
open = "3.0.0"
glob = "0.3"
globset = "0.4"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
slug = "0.1.4"
filetime = "0.2"
tera = { version = "1.17", features = ["preserve_order", "date-locale"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "0.11", default-features = false }

[lib]
name = "libs"
path = "src/lib.rs"