[package]
name = "markdown"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
edition = "2021"
description = "Markdown processing library for Genetics"
publish = false
repository = "https://github.com/iamgabrielsoft/genetics"

[lib]
name = "markdown"
path = "src/lib.rs"

[dependencies]
pulldown-cmark = { version = "0.8.0", default-features = false }
pulldown-cmark-escape = "0.10.0"
anyhow = "1.0"
tera = "1.20.0"
config = { path = "../config" }
libs = { path = "../libs" }
utils = { path = "../utils" }
once_cell = "1.18.0"
