[package]
name = "utils"
version = "0.1.0"
authors = ["Gabriel <gabriel@iamgabrielsoft.com>"]
edition = "2021"
description = "Utilities for Genetics"
publish = false
repository = "https://github.com/iamgabrielsoft/genetics"
include = ["src/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
ws = "0.9"
notify-debouncer-full = "0.5"
ctrlc = "3.4"
tokio = { version = "1.0", features = ["full"] }
open = "3.0"
regex = "1.0"
once_cell = "1.0"
toml = "0.7"
walkdir = "2.3"

# Local crates
errors = { path = "../errors" }
libs = { path = "../libs" }

[dev-dependencies]
tempfile = "3"
time = { version = "0.3", features = ["macros"] }